fixed horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ html, body {
   margin: 0;
   height: 100%;
   width:100%;
+  max-width: 100%;
   position:fixed;
   overflow-x: hidden;
   font-family: 'Quattrocento Sans', sans-serif;
@@ -14,7 +15,10 @@ body {
   position: fixed;
   height: 100%;
   width:100%;
-  overflow: scroll;
+  max-width: 100% !important;
+  overflow-x: hidden !important;
+  /*overflow: scroll;
+  overflow-x: scroll;*/
 }
 h1 {
   margin-top: 0;
